tests/valid_inputs/unary_and.cpp

int main() {
	int a, *pa = &a;
}
