tests/invalid_inputs/sema/nested_ptr_decl.cpp

int main() {
	int (*foo) (int a);
	
}
